--- a/client/src/pages/PlayerPageLayout.module.css
+++ b/client/src/pages/PlayerPageLayout.module.css
@@ -153,6 +153,8 @@
     max-height: 500px;
     position: static;
     order: 2;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 
   .playerMain {
